Fix issue with main news image and layout on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,9 +13,22 @@
   margin: 0 auto;
 }
 
+.main-news {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 300px;
+}
 .main-news .img-fluid {
   width: 100%;
   max-height: 426px;
+}
+
+@media (max-width: 991px) {
+  .home .news-list .content .description {
+    display: none;
+  }
 }
 
 .favourite-btn {
