--- a/scss/components/home.scss
+++ b/scss/components/home.scss
@@ -15,7 +15,27 @@
     }
 }
 
-.main-news .img-fluid {
+.main-news {
     width: 100%;
-    max-height: 426px;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 300px;
+    
+    .img-fluid {
+        width: 100%;
+        max-height: 426px;
+    }
+}
+
+.home {
+    .news-list {
+        .content {
+            .description {
+                @media (max-width: 991px) {
+                    display: none;
+                }
+            }
+        }
+    }
 }
